# ShaRKF00D

./: CMakeLists.txt  README.md  build.sh  file.c  main.c  main.h  pfs.c  sbrk.c  sce-elf.h  sha256.c
modules/common/: self.h
modules/kernel/: main.c
modules/kplugin/: CMakeLists.txt  kernel.h
modules/uplugin/: CMakeLists.txt  userAllied.c
modules/user/: CMakeLists.txt
pkg/sce_sys/livearea/contents/: template.xml
